--- a/Typography.html
+++ b/Typography.html
@@ -74,7 +74,11 @@ html
  </abbr><br>
        
        
+<P>
 
+<h1 class="display-1"> Nature</h1>  Nature is the ultimate <mark>of our living. Both living and non-living  include nature, and everyone is interdependent, which helps maintain the ecosystem.</mark> Plants, animals, and humans all depend on nature for their survival. <code> supplies oxygen, sunlight, soil, water, and other necessary component
+
+</P>
 
 
 
