--- a/container.html
+++ b/container.html
@@ -48,7 +48,10 @@
 
 
 
-
+<div class="container bg warning"> 
+<h1 style="color: crimson;">Hobbies</h1>
+<p style="color: darkturquoise;">A hobby is an activity that someone enjoys doing in their spare time. It can be anything from cooking and gardening to playing sports and collecting stamps. There are no rules about what makes a good hobby, so it is entirely up to the individual to choose something that they enjoy.</p>
+</div>
 
 
 
