--- a/utlity.html
+++ b/utlity.html
@@ -69,12 +69,14 @@ Leaves
 
 </div>
 
-<botton class="btn btn-danger">
+<button class="btn btn-danger">
 information
 
+<span class="badge badge-warning">
+3
+</span>
+</button>
 
-
-   
 
 
 
